[package]
name = "no-std-check"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
ibc-types = { git = "https://github.com/permissionlessweb/ibc-types", branch = "zk-mvp", default-features = false, features = ["mocks-no-std", "serde"] }
ibc-proto = { git = "https://github.com/permissionlessweb/ibc-proto-rs", branch = "zk-mvp", default-features = false }
tendermint = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp", default-features = false }
tendermint-proto = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp", default-features = false }
tendermint-light-client-verifier = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp", default-features = false, features = ["rust-crypto"] }

sp-core = { version = "17.0.0", default-features = false, optional = true }
sp-io = { version = "18.0.0", default-features = false, optional = true }
sp-runtime = { version = "19.0.0", default-features = false, optional = true }
sp-std = { version = "6.0.0", default-features = false, optional = true }

[features]
panic-handler = []
use-substrate = ["sp-core", "sp-io", "sp-runtime", "sp-std"]
substrate-std = ["sp-core/std", "sp-io/std", "sp-runtime/std", "sp-std/std"]
